--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "css-var-editor",
     "version": "1.0.0",
     "description": "A dat.gui editor which will detect all\nroot css variables of a site and presents them in the editor.\nFrom there you can preview you changes.",
-    "main": "dist/bundle.js",
+    "main": "dist/bundle.min.js",
     "scripts": {
         "build": "npx rollup -c rollup.config.js",
         "dev": "npx lite-server --baseDir='./'"
@@ -25,7 +25,8 @@
         "@rollup/plugin-babel": "^5.0.2",
         "@rollup/plugin-commonjs": "^12.0.0",
         "@rollup/plugin-node-resolve": "^8.0.0",
-        "dat.gui": "^0.7.7"
+        "dat.gui": "^0.7.7",
+        "rollup-plugin-uglify": "^6.0.4"
     },
     "dependencies": {}
 }
