--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/bundle.min.js",
     "scripts": {
         "build": "npx rollup -c rollup.config.js",
-        "dev": "npx lite-server --baseDir='./'"
+        "dev": "npx rollup -w -c rollup.config.js"
     },
     "repository": {
         "type": "git",
